--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
 </head>
 <body>
   <div class="main-container">
-    <header>NASA</header>
-  </div>
-</body>
+    <header>
+      <h1>NASA</h1>
+    </header>
+    <main>
+    <div class="office">
+      <h3>SOCIAL MEDIA</h3>
+      <p><a href="https://twitter.com/NASA">Twitter</a></p>
+      <p><a href="https://www.facebook.com/NASA/">Facebook</a></p>
+      <p><a href="https://www.instagram.com/nasa/">Instagram</a></p>
+      <p><a href="https://www.youtube.com/user/NASAtelevision">Youtube</a></p>
+    </div>
+    <div class="office">
+      <h3>OFFICE INFO</h3>
+      <p><a href="https://www.google.com/maps/place/NASA/@38.8830649,-77.0184673,17z/data=!3m1!4b1!4m5!3m4!1s0x89b7b77f50ae6f01:0x676e7adc4032899b!8m2!3d38.8830649!4d-77.0162786">Public Communications Office</a>
+      <p>Nasa Headquarters</p>
+      <p>300 E. Street SW Suite 5R30</p>
+      <p>Washington, DC 20546</p>
+      <p>(202) 358-0001 (Office)</p>
+      <p>(202) 358-4338 (Fax)</p>
+    </div>
+    <div class="office">
+      <h3>CONTACT US</h3>
+    </div>
+    </main>
+  </body>
 </html>
