done for the night

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html lang="en">
 <head>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Strait&display=swap" rel="stylesheet"> 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NASA</title>
   <link rel="stylesheet" href="./styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body>
   <div class="main-container">
@@ -15,8 +18,8 @@
       <h3>SOCIAL MEDIA</h3>
       <p><a href="https://twitter.com/NASA">Twitter</a></p>
       <p><a href="https://www.facebook.com/NASA/">Facebook</a></p>
-      <p><a href="https://www.instagram.com/nasa/">Instagram</a></p>
       <p><a href="https://www.youtube.com/user/NASAtelevision">Youtube</a></p>
+      <p><a href="https://www.instagram.com/nasa/">Instagram</a></p>
     </div>
     <div class="office">
       <h3>OFFICE INFO</h3>
@@ -29,6 +32,16 @@
     </div>
     <div class="office">
       <h3>CONTACT US</h3>
+      <form>
+        <label>Name</label>
+        <br>
+        <input class="input-name" type="text">
+        <br>
+        <label>Message</label>
+        <br>
+        <textarea name="text1" rows="5"></textarea>
+        <input class="btn-submit" type="submit" value="send">
+      </form>
     </div>
     </main>
   </body>
