--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
     <div class="office">
       <h3>SOCIAL MEDIA</h3>
-      <p><<a href="https://twitter.com/NASA">Twitter</a></p>
+      <p><a href="https://twitter.com/NASA">Twitter</a></p>
       <p><a href="https://www.facebook.com/NASA/">Facebook</a></p>
       <p><a href="https://www.youtube.com/user/NASAtelevision">Youtube</a></p>
       <p><a href="https://www.instagram.com/nasa/">Instagram</a></p>
