--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <p><a href="https://www.facebook.com/NASA/">Facebook</a></p>
       <p><a href="https://www.youtube.com/user/NASAtelevision">Youtube</a></p>
       <p><a href="https://www.instagram.com/nasa/">Instagram</a></p>
+      <p><a href="https://claxb.github.io/nasa_slide_c12/">Look Where We're Going!</a></p>
     </div>
     <div class="office">
       <h3>OFFICE INFO</h3>
