--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 <body>
   <div class="main-container">
+    <div class="head">
     <header>
       <h1>NASA</h1>
     </header>
+    </div>
     <main>
-    <div class="office">
+    <div class="office1">
       <h3>SOCIAL MEDIA</h3>
       <p><a href="https://twitter.com/NASA">Twitter</a></p>
       <p><a href="https://www.facebook.com/NASA/">Facebook</a></p>
@@ -22,7 +24,7 @@
       <p><a href="https://www.instagram.com/nasa/">Instagram</a></p>
       <p><a href="https://claxb.github.io/nasa_slide_c12/">Look Where We're Going!</a></p>
     </div>
-    <div class="office">
+    <div class="office2">
       <h3>OFFICE INFO</h3>
       <p><a href="https://www.google.com/maps/place/NASA/@38.8830649,-77.0184673,17z/data=!3m1!4b1!4m5!3m4!1s0x89b7b77f50ae6f01:0x676e7adc4032899b!8m2!3d38.8830649!4d-77.0162786">Public Communications Office</a>
       <p>Nasa Headquarters</p>
@@ -31,7 +33,7 @@
       <p>(202) 358-0001 (Office)</p>
       <p>(202) 358-4338 (Fax)</p>
     </div>
-    <div class="office">
+    <div class="office3">
       <h3>CONTACT US</h3>
       <form>
         <label>Name</label>
